1. 适当增加解析部分的字号 2. 修复iOS Anki记忆卡上直接显示答案时，【你的选项】为@的问题 3. 修复iOS Anki记忆卡上解析部分字体偏粗的问题

--- a/back.html
+++ b/back.html
@@ -125,10 +125,12 @@
     var alphas = []
     for (var i in numbers) {
       var number = numbers[i]
-      if (optionsOrder.length === 0) {
-        alphas.push(String.fromCharCode(Number.parseInt(number) + 64))
-      } else {
-        alphas.push(String.fromCharCode(optionsOrder.indexOf(number) + 65))
+      if (number) {
+        if (optionsOrder.length === 0) {
+          alphas.push(String.fromCharCode(Number.parseInt(number) + 64))
+        } else {
+          alphas.push(String.fromCharCode(optionsOrder.indexOf(number) + 65))
+        }
       }
     }
     alphas.sort()
