--- a/back.html
+++ b/back.html
@@ -24,7 +24,7 @@
   <div class="notes-container">{{notes}}</div>
 </div>
 
-<div class="footer">v3.6，作者：git9527，开源地址：<a href="https://github.com/git9527/anki-awesome-select">Github</a> | <a href="https://gitee.com/git9527/anki-awesome-select">Gitee</a></div>
+<div class="footer">v3.7，作者：git9527，开源地址：<a href="https://github.com/git9527/anki-awesome-select">Github</a> | <a href="https://gitee.com/git9527/anki-awesome-select">Gitee</a></div>
 
 <div id="answer" style="display:none">{{answer}}</div>
 <div id="options" style="display:none">{{options}}</div>
@@ -58,8 +58,10 @@
           _class = 'option'
         }
       } else {
-        if (_isCorrect) {
+        if (_isCorrect && _isSelected) {
           _class = 'option ' + correctClass
+        } else if (_isCorrect && !_isSelected) {
+          _class = 'option ' + shouldSelectClass
         } else {
           _class = _isSelected ? 'option ' + wrongClass : 'option'
         }
@@ -143,7 +145,7 @@
     document.getElementById("correctAnswer").innerHTML = numberToAlpha(document.getElementById("answer").innerHTML.trim().split('||'))
     if (Persistence.isAvailable()) {
       var selectedNumbers = (Persistence.getItem('ANKI-SELECTED') || '').trim().split(',')
-      document.getElementById("yourChoice").innerHTML = numberToAlpha(selectedNumbers)
+      document.getElementById("yourChoice").innerHTML = numberToAlpha(selectedNumbers) || '未选择'
       Persistence.setItem('ANKI-SELECTED', '')
       var showQuestionType = Persistence.getItem('ANKI-SETTINGS-SHOW-QUESTION-TYPE') || '0'
       if (showQuestionType === '1') {
